# synthpanel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: synthpanel.yml
examples/: landingpage_demo.md  synthpanel_self.md
scripts/: make_screenshot.py
synthpanel/: __init__.py  cli.py  models.py  schemas.py  store.py  util.py
synthpanel/lenses/: __init__.py  library.yaml  loader.py
synthpanel/orchestrator/: __init__.py  report.py  synthesis.py
synthpanel/swarm/: __init__.py  runner.py
tests/: test_synthesis.py
