[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synthpanel"
version = "0.1.0"
description = "Synthetisches Test-Panel: findet Reibung in deinem Text aus diversen Blickwinkeln, bevor echte Nutzer es tun."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sascha Manke" }]
keywords = ["testing", "feedback", "personas", "accessibility", "ux", "llm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6.0", "pydantic>=2.0", "rich>=13.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.scripts]
synthpanel = "synthpanel.cli:main"

[tool.setuptools]
packages = [
    "synthpanel",
    "synthpanel.lenses",
    "synthpanel.swarm",
    "synthpanel.orchestrator",
]

[tool.setuptools.package-data]
"synthpanel.lenses" = ["*.yaml"]
